--- a/index.html
+++ b/index.html
@@ -1,15 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Need to add a SVG logo later -->
-     <!-- favicon -->
-    <link rel="icon" type="image/svg+xml+png" href="./src/assets/logo/logo.png" />
-
-    <!-- Meta Tags -->
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- Title for the webbpage -->
     <title>Johannes Brannelid | Portfolio</title>
   </head>
   <body>
