--- a/index.html
+++ b/index.html
@@ -2,9 +2,83 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/react-portfolio/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Johannes Brannelid | Portfolio</title>
+
+    <!-- Preload critical fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Johannes Brannelid - Portfolio & Resume | Fullstack .NET Developer in Stockholm, Sweden. Radiographer turned developer with expertise in frontend and backend technologies."
+    />
+
+    <!-- For web robots -->
+    <meta name="author" content="Johannes Brannelid" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Social Media Meta Tags -->
+    <meta property="og:title" content="Johannes Brannelid | Portfolio" />
+    <meta
+      property="og:description"
+      content="Fullstack .NET Developer & Radiographer based in Stockholm, Sweden. Explore my projects and professional journey."
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://jbrannelid.github.io/react-portfolio/"
+    />
+    <meta
+      property="og:image"
+      content="https://jbrannelid.github.io/react-portfolio/assets/portrait/Johannes.png"
+    />
+
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Johannes Brannelid | Portfolio" />
+    <meta
+      name="twitter:description"
+      content="Fullstack .NET Developer & Radiographer based in Stockholm, Sweden. Explore my projects and professional journey."
+    />
+    <meta
+      name="twitter:image"
+      content="https://jbrannelid.github.io/react-portfolio/assets/portrait/Johannes.png"
+    />
+
+    <!-- Favicon and site img -->
+    <link
+      rel="icon"
+      type="image/png"
+      href="/react-portfolio/assets/logo/favicon-96x96.png"
+      sizes="96x96"
+    />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/react-portfolio/assets/logo/favicon.svg"
+    />
+    <link rel="shortcut icon" href="/react-portfolio/assets/logo/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/react-portfolio/assets/logo/apple-touch-icon.png"
+    />
+    <meta
+      name="apple-mobile-web-app-title"
+      content="Johannes Brannelid Portfolio"
+    />
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="theme-color" content="#ec8b2a" />
+
+    <!-- Canonical URL -->
+    <link
+      rel="canonical"
+      href="https://jbrannelid.github.io/react-portfolio/"
+    />
+
+    <!-- Site Title -->
+    <title>Johannes Brannelid | Portfolio - Fullstack .NET Student</title>
   </head>
   <body>
     <div id="root"></div>
