Performence upgrades and improvments regaring UI and UX

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
+      content="width=device-width, initial-scale=1.0, maximum-scale=5.0, viewport-fit=cover"
     />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
@@ -36,7 +36,7 @@
     />
     <meta
       property="og:image"
-      content="https://jbrannelid.github.io/react-portfolio/assets/portrait/Johannes.png"
+      content="https://jbrannelid.github.io/react-portfolio/assets/portrait/IMG_2402.webp"
     />
 
     <!-- Twitter Card data -->
@@ -48,7 +48,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://jbrannelid.github.io/react-portfolio/assets/portrait/Johannes.png"
+      content="https://jbrannelid.github.io/react-portfolio/assets/portrait/IMG_2402.webp"
     />
 
     <!-- Favicon and site img -->
@@ -76,7 +76,7 @@
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="theme-color" content="#ec8b2a" />
 
-    <!-- Canonical URL -->
+    <!-- Canonical URL for google -->
     <link
       rel="canonical"
       href="https://jbrannelid.github.io/react-portfolio/"
@@ -87,6 +87,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <!-- Defer JavaScript -->
+    <script type="module" src="/src/main.jsx" defer></script>
   </body>
 </html>
