--- a/index.html
+++ b/index.html
@@ -73,7 +73,12 @@
       name="apple-mobile-web-app-title"
       content="Johannes Brannelid Portfolio"
     />
-    <link rel="manifest" href="/site.webmanifest" />
+    <!-- Updated manifest link with correct base URL -->
+    <link
+      rel="manifest"
+      href="manifest.json"
+      type="application/manifest+json"
+    />
     <meta name="theme-color" content="#ec8b2a" />
 
     <!-- Canonical URL for google -->
