Update configuration for Netlify deployment with custom domain

--- a/index.html
+++ b/index.html
@@ -30,13 +30,10 @@
       content="Fullstack .NET Developer & Radiographer based in Stockholm, Sweden. Explore my projects and professional journey."
     />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:url"
-      content="https://jbrannelid.github.io/react-portfolio/"
-    />
+    <meta property="og:url" content="https://jbrannelid.com/" />
     <meta
       property="og:image"
-      content="https://jbrannelid.github.io/react-portfolio/assets/portrait/IMG_2402.webp"
+      content="https://jbrannelid.com/assets/portrait/IMG_2402.webp"
     />
 
     <!-- Twitter Card data -->
@@ -48,44 +45,37 @@
     />
     <meta
       name="twitter:image"
-      content="https://jbrannelid.github.io/react-portfolio/assets/portrait/IMG_2402.webp"
+      content="https://jbrannelid.com/assets/portrait/IMG_2402.webp"
     />
 
     <!-- Favicon and site img -->
     <link
       rel="icon"
       type="image/png"
-      href="/react-portfolio/assets/logo/favicon-96x96.png"
+      href="/assets/logo/favicon-96x96.png"
       sizes="96x96"
     />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/react-portfolio/assets/logo/favicon.svg"
-    />
-    <link rel="shortcut icon" href="/react-portfolio/assets/logo/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/assets/logo/favicon.svg" />
+    <link rel="shortcut icon" href="/assets/logo/favicon.ico" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/react-portfolio/assets/logo/apple-touch-icon.png"
+      href="/assets/logo/apple-touch-icon.png"
     />
     <meta
       name="apple-mobile-web-app-title"
       content="Johannes Brannelid Portfolio"
     />
-    <!-- Updated manifest link with correct base URL -->
+    <!-- Manifest link -->
     <link
       rel="manifest"
-      href="manifest.json"
+      href="/manifest.json"
       type="application/manifest+json"
     />
     <meta name="theme-color" content="#ec8b2a" />
 
     <!-- Canonical URL for google -->
-    <link
-      rel="canonical"
-      href="https://jbrannelid.github.io/react-portfolio/"
-    />
+    <link rel="canonical" href="https://jbrannelid.com/" />
 
     <!-- Site Title -->
     <title>Johannes Brannelid | Portfolio - Fullstack .NET Student</title>
